# ai-governance-control-plane

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CONTRIBUTING.md  README.md  README.md.bak  SECURITY.md  action-workflow-specification.prompt.yml  docker-compose.pgbackrest.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt
.github/: dependabot.yml  dependency-review-config.yml
.github/instructions/: *.instructions.md  instructions.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  gitleaks.yml  governance-gate.yml  pg-backup-restore-test.yml  pip-audit.yml  release.yml  trivy-scan.yml
backups/: latest.dump
clients/python/: governance_client.py
collections/: ai-governance-control-plane.collection.yml  ai-governance-control-plane.md
docs/: API.md  ARCHITECTURE.md  PGBACKREST.md  README-Quickstart.md  SECURITY-AIBOM.md
examples/: demo_notebook.md  register_model.json
infra/: init.sql
infra/keys/: README.md
infra/migrations/: 0001_add_request_id_column.sql  README.md
infra/pgbackrest/: QUICKREF.md  README.md  cron-pgbackrest  (+6 more)
policies/: model-policy.yml  risk-matrix.yml
scripts/: download-wheels.py  lint.ps1  migrate.py  pg-backup.ps1  pg-restore.ps1  pgbackrest-backup.ps1  pgbackrest-backup.sh  pgbackrest-init.ps1  pgbackrest-init.sh  pgbackrest-restore-validation.ps1  pgbackrest-restore-validation.sh  vulture_whitelist.py
tests/: conftest.py  test_collections_yaml.py  test_examples_and_sql.py  test_health.py  test_pgbackrest.py  test_policies_yaml.py
(+37 files in other folders)
